Remove compile files, modification of Deep learning

--- a/state-of-art/Deep_learning/deeplearning.bib
+++ b/state-of-art/Deep_learning/deeplearning.bib
@@ -2,12 +2,77 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Léopold Crestel at 2015-09-27 22:17:37 +0200 
+%% Created for Léopold Crestel at 2015-10-03 13:36:51 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{kiros2014unifying,
+	Author = {Kiros, Ryan and Salakhutdinov, Ruslan and Zemel, Richard S},
+	Date-Added = {2015-10-02 15:12:39 +0000},
+	Date-Modified = {2015-10-02 15:12:39 +0000},
+	Journal = {arXiv preprint arXiv:1411.2539},
+	Title = {Unifying visual-semantic embeddings with multimodal neural language models},
+	Year = {2014}}
+
+@inproceedings{salakhutdinov2008quantitative,
+	Author = {Salakhutdinov, Ruslan and Murray, Iain},
+	Booktitle = {Proceedings of the 25th international conference on Machine learning},
+	Date-Added = {2015-09-30 15:51:34 +0000},
+	Date-Modified = {2015-09-30 15:51:34 +0000},
+	Organization = {ACM},
+	Pages = {872--879},
+	Title = {On the quantitative analysis of deep belief networks},
+	Year = {2008}}
+
+@book{bishop2006pattern,
+	Author = {Bishop, Christopher M},
+	Date-Added = {2015-09-30 09:26:23 +0000},
+	Date-Modified = {2015-09-30 09:26:23 +0000},
+	Publisher = {springer},
+	Title = {Pattern recognition and machine learning},
+	Year = {2006}}
+
+@phdthesis{salakhutdinov2009learning,
+	Author = {Salakhutdinov, Ruslan},
+	Date-Added = {2015-09-30 09:24:40 +0000},
+	Date-Modified = {2015-09-30 09:24:40 +0000},
+	School = {University of Toronto},
+	Title = {Learning deep generative models},
+	Year = {2009}}
+
+@inproceedings{salakhutdinov2010efficient,
+	Author = {Salakhutdinov, Ruslan and Larochelle, Hugo},
+	Booktitle = {International Conference on Artificial Intelligence and Statistics},
+	Date-Added = {2015-09-30 09:05:16 +0000},
+	Date-Modified = {2015-09-30 09:05:16 +0000},
+	Pages = {693--700},
+	Title = {Efficient learning of deep Boltzmann machines},
+	Year = {2010}}
+
+@techreport{salakhutdinov2008learning,
+	Author = {Salakhutdinov, Ruslan},
+	Date-Added = {2015-09-29 16:09:46 +0000},
+	Date-Modified = {2015-09-29 16:09:46 +0000},
+	Institution = {Technical Report UTML TR 2008-002, Department of Computer Science, University of Toronto},
+	Title = {Learning and evaluating Boltzmann machines},
+	Year = {2008}}
+
+@article{DBLP:journals/corr/YaoCVDD15,
+	Author = {Kaisheng Yao and Trevor Cohn and Katerina Vylomova and Kevin Duh and Chris Dyer},
+	Bibsource = {dblp computer science bibliography, http://dblp.org},
+	Biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/YaoCVDD15},
+	Date-Added = {2015-09-28 11:19:07 +0000},
+	Date-Modified = {2015-09-28 11:19:07 +0000},
+	Journal = {CoRR},
+	Timestamp = {Tue, 01 Sep 2015 14:42:40 +0200},
+	Title = {Depth-Gated {LSTM}},
+	Url = {http://arxiv.org/abs/1508.03790},
+	Volume = {abs/1508.03790},
+	Year = {2015},
+	Bdsk-Url-1 = {http://arxiv.org/abs/1508.03790}}
 
 @article{baldi1989neural,
 	Author = {Baldi, Pierre and Hornik, Kurt},
