--- a/state-of-art/Deep_learning/deeplearning.bib
+++ b/state-of-art/Deep_learning/deeplearning.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Léopold Crestel at 2015-10-03 13:36:51 +0200 
+%% Created for Léopold Crestel at 2015-11-09 14:44:00 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{nair2010rectified,
+	Author = {Nair, Vinod and Hinton, Geoffrey E},
+	Booktitle = {Proceedings of the 27th International Conference on Machine Learning (ICML-10)},
+	Date-Added = {2015-11-03 15:48:47 +0000},
+	Date-Modified = {2015-11-03 15:48:47 +0000},
+	Pages = {807--814},
+	Title = {Rectified linear units improve restricted boltzmann machines},
+	Year = {2010}}
 
 @article{kiros2014unifying,
 	Author = {Kiros, Ryan and Salakhutdinov, Ruslan and Zemel, Richard S},
